syntax = "proto3";

package data;

service DataService {
  rpc GetAllRows (Empty) returns (RowList);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateZaloga (zalogaRequest)  returns (zalogaResponse);
  rpc getAllMeals (Empty)  returns (MealList);
}

message Empty {}

message Meal {
  int32 id = 1;
  string ime = 2;
  float cena = 3;
  string opis = 4;
  string tip = 5;
  int32 zaloga = 6;
}

message MealList {
  repeated Meal meals = 1;
}

message Row {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message RowList {
  repeated Row rows = 1;
}

message CreateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
message CreateUserResponse {
  string message = 1;
}

message zalogaRequest{
int32 id = 1;
int32 amount = 2;
}
message zalogaResponse{
string message = 1;
}